cxx/pip_boy/include/fwwasm.h

// general
void waitms(int iMilliseconds) WASM_IMPORT("waitms");  // tested
// gpio
void setled(int iOn) WASM_IMPORT("setled");           // tested
void setIO(int iGPIO, int iOn) WASM_IMPORT("setIO");  // implemented
unsigned int getIO(int iGPIO) WASM_IMPORT("getIO");   // implemented
unsigned int getAllIO() WASM_IMPORT("getAllIO");      // implemented
// i2c
int i2cRead(int iAddress, int iRegister, unsigned char *pBytes, int iLength) WASM_IMPORT("i2cRead");    // implemented
int i2cWrite(int iAddress, int iRegister, unsigned char *pBytes, int iLength) WASM_IMPORT("i2cWrite");  // implemented
// SPI
int SPIReadWrite(unsigned char *pBytesIn, int iLength, unsigned char *pBytesOut)
    WASM_IMPORT("SPIReadWrite");  // implemented (dont like no chip select)
// UART
int UARTDataRxCount() WASM_IMPORT("UARTDataRxCount");                                  // implemented
int UARTDataRead(unsigned char *pBytesOut, int iLength) WASM_IMPORT("UARTDataRead");   // implemented
int UARTDataWrite(unsigned char *pBytesIn, int iLength) WASM_IMPORT("UARTDataWrite");  // implemented
// PWM
int PWMSetFreqDuty(int iGPIO, float fFreq, float fDuty) WASM_IMPORT("PWMSetFreqDuty");  // implemeted
int PWMStop(int iGPIO) WASM_IMPORT("PWMStop");                                          // implemented
// radio
int RadioWrite(int iRadioIndex, unsigned char *btBytes, int iLength) WASM_IMPORT("RadioWrite");
 

// ir
void sendIRData(unsigned int iData) WASM_IMPORT("sendIRData");  // implemented
// LEDs
enum LEDManagerLEDMode {
    ledsimplevalue,
    ledflash,
    ledpulse,
    ledflashfade,
    ledpulsefade,
};
enum ePanelColorLED {
    LEDColorRed,
    LEDColorGreen,
    LEDColorYellow,
    LEDColorBlue,
    LEDColorOrange,
    LEDColorAqua,
    LEDColorMagenta,
    LEDColorWhite,
};
enum ePanelSizeLED {
    LEDSize32,
    LEDSize48,
    LEDSize64,
};
void setBoardLED(int iLEDIndex0_7, int iR, int iG, int iB, int iDurationMs, enum LEDManagerLEDMode iMode)
    WASM_IMPORT("setBoardLED");                                   // tested
void setLEDShowMode(int iLEDShow) WASM_IMPORT("setLEDShowMode");  // tested
// sound speaker
void playSoundFromFile(char *szSoundPath) WASM_IMPORT("playSoundFromFile");                         // implemented
void playSoundFromNameOrID(const char *szSoundName, int iID) WASM_IMPORT("playSoundFromNameOrID");  // tested
void playSoundFromNumber(int bFloat, int iNumber, float fNumber, int iFloatDigits)
    WASM_IMPORT("playSoundFromNumber");  // tested
// fileio
int openFile(char *szFileName, int iForWriting) WASM_IMPORT("OpenFile");                                // implemented
int closeFile(int iHandle) WASM_IMPORT("closeFile");                                                    // implemented
int writeFile(int iHandle, unsigned char *btBytes, int iNumByte) WASM_IMPORT("writeFile");              // implemented
int readFile(int iHandle, unsigned char *btBytes, int *iNumBytes) WASM_IMPORT("readFile");              // implemented
int setFilePosition(int iHandle, int iPosition) WASM_IMPORT("setFilePosition");                         // implemented
int getFilePosition(int iHandle) WASM_IMPORT("getFilePosition");                                        // implemented
int fileExists(char *szFilePath) WASM_IMPORT("fileExists");        // implemented
int makeDirectory(char *szFilePath) WASM_IMPORT("makeDirectory");  // implemented
int hasEvent() WASM_IMPORT("hasEvent");                              // tested
// Panel Apis
void addPanel(int iPanelIndex, int iVisible, int iInRotation, int iUseTile, int iTileID, unsigned char iR,
              unsigned char iG, unsigned iB, int iShowMenu) WASM_IMPORT("addPanel");  // tested
////////// controls
void addControlLED(int iPanelIndex, int iControlIndex, int iX, int iY, enum ePanelColorLED iColor, enum ePanelSizeLED iSize,
                   int iIntialState) WASM_IMPORT("addControlLED");  // redefined and implemented
void setListItemText(int iLogIndex, int iListIndex, const char *szText) WASM_IMPORT("setListItemText");  // implemented
void addControlLogList(int iPanelIndex, int iControlIndex, int iVisible, int iLog, int iX, int iY, int iWidth,
                       int iHeight, int iFontType, int iFontSize, int iR, int iG, int iB, int iRFont, int iGFont,
                       int iBFont, int iListMode) WASM_IMPORT("addControlLogList");  // implemented
void addControlPlotXAxis(int iPanelIndex, int iControlIndex, int iScrollMode, unsigned long long iTimeMin,
                         unsigned long long iTimeMax) WASM_IMPORT("addControlPlotXAxis");
void addControlPlotData(int iPlotDataIndex, int iR, int iG, int iB) WASM_IMPORT("addControlPlotData");  // implemented
void addControlPlot(int iPanelIndex, int iControlIndex, int iVisible, int iPlotDataIndexBitField, int iX, int iY,
                    int iWidth, int iHeight, int iMin, int iMax, int iR, int iG, int iB)
    WASM_IMPORT("addControlPlot");  // implemented
void addControlNumber(int iPanelIndex, int iControlIndex, int iVisible, int iX, int iY, int iWidth, int iFontSize,
                      int iFontType, int iR, int iG, int iB, int iIsFloat, int iFloatDigits, int bIsHexFormat,
                      int bIsUnsigned) WASM_IMPORT("addControlNumber");  // implemented
void addControlPicture(int iPanelIndex, int iControlIndex, int iX, int iY, int iPictureId, int iVisible)
    WASM_IMPORT("addControlPicture");  // tested
void addControlText(int iPanelIndex, int iControlIndex, int iX, int iY, int iFontType, int iFontSize, int iR, int iG,
                    int iB,
                    const char *szText) WASM_IMPORT("addControlText");  // implemented
void addControlBargraph(int iPanelIndex, int iControlIndex, int iVisible, int iX, int iY, int iWidth, int iHeight,
                        int iMin, int iMax, int iR, int iG, int iB) WASM_IMPORT("addControlBargraph");  // implemented
void addControlButton(int iPanelIndex, int iControlIndex, int iVisible, int iX, int iY, int iWidth, int iHeight, int iR,
                      int iG, int iB, int iRFore, int iGFore, int iBFore,
                      const char *szText) WASM_IMPORT("addControlButton");  // implemented
void setControlValueMinMax(int iPanelIndex, int iControlIndex, int bEnableMinMax, int iMin, int iMax)
    WASM_IMPORT("setControlValueMinMax");  // implemented
// RTC
void getRTC() WASM_IMPORT("getRTC");  // implemented