rust/rainbow_led/src/fwwasm.rs

/* automatically generated by rust-bindgen 0.69.4 */

#![allow(non_upper_case_globals, unused, dead_code)]

pub const __bool_true_false_are_defined: u32 = 1;
pub const true_: u32 = 1;
pub const false_: u32 = 0;
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn waitms(iMilliseconds: ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn getRTC();
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn printout();
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn quitAndLoadScript(szScriptPath: *mut ::core::ffi::c_char);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setled(iOn: ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setIO(iGPIO: ::core::ffi::c_int, iOn: ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn getIO(iGPIO: ::core::ffi::c_int) -> ::core::ffi::c_uint;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn getAllIO() -> ::core::ffi::c_uint;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn i2cRead(
        iAddress: ::core::ffi::c_int,
        iRegister: ::core::ffi::c_int,
        pBytes: *mut ::core::ffi::c_uchar,
        iLength: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn i2cWrite(
        iAddress: ::core::ffi::c_int,
        iRegister: ::core::ffi::c_int,
        pBytes: *mut ::core::ffi::c_uchar,
        iLength: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn SPIReadWrite(
        pBytesIn: *mut ::core::ffi::c_uchar,
        iLength: ::core::ffi::c_int,
        pBytesOut: *mut ::core::ffi::c_uchar,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn UARTDataRxCount() -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn UARTDataRead(
        pBytesOut: *mut ::core::ffi::c_uchar,
        iLength: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn UARTDataWrite(
        pBytesIn: *mut ::core::ffi::c_uchar,
        iLength: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn PWMSetFreqDuty(iGPIO: ::core::ffi::c_int, fFreq: f32, fDuty: f32) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn PWMStop(iGPIO: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn RadioDataRxCount() -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn RadioDataRead(
        pBytesOut: *mut ::core::ffi::c_uchar,
        iLength: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn RadioWrite(
        pBytesIn: *mut ::core::ffi::c_uchar,
        iLength: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn sendIRData(iData: ::core::ffi::c_uint);
}
pub const LEDManagerLEDMode_ledsimplevalue: LEDManagerLEDMode = 0;
pub const LEDManagerLEDMode_ledflash: LEDManagerLEDMode = 1;
pub const LEDManagerLEDMode_ledpulse: LEDManagerLEDMode = 2;
pub const LEDManagerLEDMode_ledflashfade: LEDManagerLEDMode = 3;
pub const LEDManagerLEDMode_ledpulsefade: LEDManagerLEDMode = 4;
pub type LEDManagerLEDMode = ::core::ffi::c_int;
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setBoardLED(
        iLEDIndex0_7: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
        iDurationMs: ::core::ffi::c_int,
        iMode: LEDManagerLEDMode,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setLEDShowMode(iLEDShow: ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn playSoundFromFile(szSoundPath: *mut ::core::ffi::c_char);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn playSoundFromNameOrID(szSoundName: *const ::core::ffi::c_char, iID: ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn playSoundFromNumber(bFloat: bool, iNumber: ::core::ffi::c_int, fNumber: f32);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn openFile(
        szFileName: *mut ::core::ffi::c_char,
        iForWriting: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn closeFile() -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn writeFile() -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn readFile() -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setFilePosition() -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn getFilePosition() -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn fileExists() -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn makeDirectory() -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn hasEvent() -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn getEvent() -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addPanel(
        iPanelIndex: ::core::ffi::c_int,
        iVisible: ::core::ffi::c_int,
        iInRotation: ::core::ffi::c_int,
        iMakeActive: ::core::ffi::c_int,
        iUseTile: ::core::ffi::c_int,
        iTileID: ::core::ffi::c_int,
        iR: ::core::ffi::c_uchar,
        iG: ::core::ffi::c_uchar,
        iB: ::core::ffi::c_uint,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    #[doc = " controls"]
    pub fn addControlLED(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iColor: ::core::ffi::c_int,
        iIntialState: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setListItemText(
        iLogIndex: ::core::ffi::c_int,
        iListIndex: ::core::ffi::c_int,
        szText: *const ::core::ffi::c_char,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlLogList(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iVisible: ::core::ffi::c_int,
        iLog: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iWidth: ::core::ffi::c_int,
        iHeight: ::core::ffi::c_int,
        iFontType: ::core::ffi::c_int,
        iFontSize: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
        iRFont: ::core::ffi::c_int,
        iGFont: ::core::ffi::c_int,
        iBFont: ::core::ffi::c_int,
        iListMode: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlPlotXAxisXY(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iMaxPoints: ::core::ffi::c_int,
        iXMin: ::core::ffi::c_int,
        iMax: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlPlotXAxis(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iScrollMode: ::core::ffi::c_int,
        iTimeMin: ::core::ffi::c_ulonglong,
        iTimeMax: ::core::ffi::c_ulonglong,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlPlotData(
        iPlotData: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlPlot(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iVisible: ::core::ffi::c_int,
        iPlotDataIndexBitField: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iWidth: ::core::ffi::c_int,
        iHeight: ::core::ffi::c_int,
        iMin: ::core::ffi::c_int,
        iMax: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlNumber(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iVisible: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iWidth: ::core::ffi::c_int,
        iFontSize: ::core::ffi::c_int,
        iFontType: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
        iIsFloat: ::core::ffi::c_int,
        iFloatDigits: ::core::ffi::c_int,
        bIsHexFormat: bool,
        bIsUnsigned: bool,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlPicture(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iPictureId: ::core::ffi::c_int,
        iVisible: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlText(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iFontType: ::core::ffi::c_int,
        iFontSize: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
        szText: *const ::core::ffi::c_char,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlBargraph(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iVisible: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iWidth: ::core::ffi::c_int,
        iHeight: ::core::ffi::c_int,
        iMin: ::core::ffi::c_int,
        iMax: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlMeter(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iVisible: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iWidth: ::core::ffi::c_int,
        iHeight: ::core::ffi::c_int,
        iMin: ::core::ffi::c_int,
        iMax: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlButton(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iVisible: ::core::ffi::c_int,
        iHardButtonIndex: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iWidth: ::core::ffi::c_int,
        iHeight: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
        szText: *const ::core::ffi::c_char,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setControlValueMinMax(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        bEnableMinMax: bool,
        iMin: ::core::ffi::c_int,
        iMax: ::core::ffi::c_int,
    );
}
